[gd_scene load_steps=9 format=3 uid="uid://c04u8j457145g"]

[ext_resource type="Script" uid="uid://hup3op7nniel" path="res://components/Switch3D.gd" id="1_bdpk8"]
[ext_resource type="Material" uid="uid://cv6f3hveepm7a" path="res://components/Resistor3D.tres" id="2_awtmw"]
[ext_resource type="Script" uid="uid://bhe7bl46uj0jq" path="res://components/TerminalFeedback.gd" id="2_v644y"]

[sub_resource type="BoxShape3D" id="BoxShape3D_awtmw"]
size = Vector3(0.356, 0.147, 0.525)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_base"]
albedo_color = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="BoxMesh" id="BoxMesh_base"]
size = Vector3(0.3, 0.15, 0.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_terminal"]
radius = 0.1
height = 0.923

[sub_resource type="SphereMesh" id="SphereMesh_terminal_vis"]
radius = 0.05

[node name="Node3D" type="Node3D"]
script = ExtResource("1_bdpk8")

[node name="ComponentBody" type="Area3D" parent="."]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="ComponentBody"]
shape = SubResource("BoxShape3D_awtmw")

[node name="LeverPivot" type="Node3D" parent="."]

[node name="LeverMesh" type="MeshInstance3D" parent="LeverPivot"]
material_override = SubResource("StandardMaterial3D_base")
mesh = SubResource("BoxMesh_base")

[node name="TerminalNO" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.35)
collision_layer = 2
script = ExtResource("2_v644y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TerminalNO"]
shape = SubResource("CapsuleShape3D_terminal")

[node name="Visualization" type="MeshInstance3D" parent="TerminalNO"]
material_override = ExtResource("2_awtmw")
mesh = SubResource("SphereMesh_terminal_vis")

[node name="Label3D" type="Label3D" parent="TerminalNO"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.6, 0)
visible = false
billboard = 1
text = "Normally Open"
font_size = 20

[node name="TerminalNC" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.35)
collision_layer = 2
script = ExtResource("2_v644y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TerminalNC"]
shape = SubResource("CapsuleShape3D_terminal")

[node name="Visualization" type="MeshInstance3D" parent="TerminalNC"]
material_override = ExtResource("2_awtmw")
mesh = SubResource("SphereMesh_terminal_vis")

[node name="Label3D" type="Label3D" parent="TerminalNC"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.6, 0)
visible = false
billboard = 1
text = "Normally Closed"
font_size = 20

[node name="TerminalCOM" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.347785, 0, 0)
collision_layer = 2
script = ExtResource("2_v644y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TerminalCOM"]
shape = SubResource("CapsuleShape3D_terminal")

[node name="Visualization" type="MeshInstance3D" parent="TerminalCOM"]
material_override = ExtResource("2_awtmw")
mesh = SubResource("SphereMesh_terminal_vis")

[node name="Label3D" type="Label3D" parent="TerminalCOM"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.6, 0)
visible = false
billboard = 1
text = "Common"
font_size = 20

[node name="BaseMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_base")
mesh = SubResource("BoxMesh_base")

[node name="CurrentLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.2, 0)
visible = false
text = "I: 0.00 A"
font_size = 20
